--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.2",
+    "vue-ins-progress-bar": "^1.0.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
   },
